--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -32,3 +32,57 @@ OpenIDE-Module-Long-Description=Module is intended to show the way to all XTest,
  and help them to create automated tests from scratch. It provides documentation of used technologies. \
  It makes easy to create proper test harness directory structures, build scripts, configuration files, \
  GUI test components and test suites for API or GUI testing.
+
+Err_MissingAntProjectCookie=Missing Ant Project Cookie.
+
+Title_SelectNetbeansHome=Select Tested Netbeans Home Directory (different than current)
+
+Compilation_Name=XTest Compilation
+
+Compilation_Description=XTest Compilation
+
+NetbeansHomeName=Netbeans Home
+
+NetbeansHomeDescription=Netbeans IDE Home Directory (different than current).
+
+JellyHomeName=Jelly Home
+
+JellyHomeDescription=Jelly Home Directory
+
+JemmyHomeName=Jemmy Home
+
+JemmyHomeDescription=Jemmy Home Directory
+
+TestTypeName=Test Type
+
+TestTypeDescription=Test Type
+
+XTestHomeName=XTest Home
+
+XTestHomeDescription=XTest Home Directory
+
+XTestBuildScriptName=XTest Build Script
+
+CleanResultsActionName=Clean Results
+
+ExtensionsName=Extensions and MIME Types
+
+ExtensionsDescription=Extensions and MIME Types
+
+Err_NotImplemented.=Not yet implemented.
+
+Err_HomeDirectoryNotSet=Home directory of tested IDE must be set.
+
+XTestExecutionName=XTest Execution
+
+XTestExecutionDescription=XTest Execution
+
+version=version
+
+ExecutionAttributesName=Attributes
+
+ExecutionAttributesDescription=Test Bag Attributes
+
+ShowResultsName=Show Results
+
+ShowResultsDescription=Start Browser with Results
