--- a/testtools/src/org/netbeans/modules/testtools/wizards/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/Bundle.properties
@@ -123,11 +123,11 @@ LBL_TestBagName=Test Bag Name:\
 
 LBL_TestBagAttributes=Attributes:\ 
 
-LBL_TestWorkspacePanelName=Test_Workspace_Settings
+LBL_TestWorkspacePanelName=Test Workspace Settings
 
-LBL_TestWorkspaceXTestHome=Select_XTest_Home_Directory
+LBL_TestWorkspaceXTestHome=Select XTest Home Directory
 
-LBL_TestWorkspaceNetbeansHome=Select_Netbeans_Home_Directory_(different_than_current)
+LBL_TestWorkspaceNetbeansHome=Select Netbeans Home Directory (different than current)
 
 MSG_NoDescription=No description
 
@@ -174,3 +174,37 @@ LBL_TestTypeExtraJARs=Execution Extra JARs:\
 LBL_TestTypeJemmyJARHome=Jemmy JAR Home:\ 
 
 LBL_TestTypeCompClassPath=Compliation Class Path:\ 
+
+LBL_TestWorkspaceLevel=Test Workspace possition in CVS:\ 
+
+Title_SelectNetbeansHome=Select Netbeans Home Directory (different than current)
+
+LBL_AdvancedSettings=Advanced Settings
+
+LBL_TestWorkspaceDefaultAttributes=Default Attributes:\ 
+
+TITLE_SelectXTestHome=Select XTest Home Directory
+
+MSG_TestWorkspaceExists=Test Workspace exists in selected package or has invalid name.
+
+LBL_TestWorkspaceDefaultTestType=Default Test Type:\ 
+
+ERR_TestSuiteName=Selected Test Suite name is not valid identifier.
+
+ERR_CreateSuite=Could not create new Test Suite \"{0}\" in package \"{1}\". Reason is: {2}
+
+ERR_TestTypeName=Selected Test Type name is not valid identifier.
+
+ERR_CreateTestType=Could not create new Test Type \"{0}\" in package \"{1}\". Reason is: {2}
+
+ERR_TestWorkspaceName=Selected Test Workspace name is not valid identifier.
+
+Could_not_create_new_Test_Workspace_in_package_\"=Could not create new Test Workspace in package \"{0}\". Reason is: {1}
+
+LBL_JarZipFilter=Jar and Zip File Filter
+
+Title_WorkspaceScript={0} XTest Workspace Script
+
+Title_TestTypeScript={0} Test Type Script
+
+Title_TestTypeConfig={0} Test Type Config
