changed Icon and name in tools menu

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -28,7 +28,7 @@ LBL_Action=<name for action>
 # override initialize() as indicated and use:
 # HINT_Action=<tooltip for action>
 # Actions API
-LBL_Action_Tests=Tests
+LBL_Action_Tests=JUnit Tests
 # To include a mnemomic for the Main Window menus, use e.g.:
 # LBL_Action=My Act&ion
 # If you want a special hint when it appears in a toolbar,
