#25623  - simple accessibility bugfixes [accessible names and descriptions]

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
@@ -47,8 +47,12 @@ MSG_defaulttarget_missing=<default target missing>
 EXC_target_not_exist=Target {0} does not exist in this project
 # {0} - space-separated list of targets
 MSG_suppressing_bad_deps=Warning: ignoring unknown dependencies: {0}
+ACSN_target_node_panel=Select A Task Panel
+ACSD_target_node_panel=Select a task panel.
 LBL_task_new_type=Task...
 LBL_choose_task=Choose a task to add:
+ACSN_choose_task_combo=Choose A Task Combo Box
+ACSD_choose_task_combo=Choose a task to add.
 # {0} - task name
 LBL_task_help=Task Help
 TITLE_select_task=Select a Task
