#25681 - simple accessibility bugfixes [accessible descriptions]

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -467,10 +467,13 @@ CTL_ActionInProgress=action in progress
 CTL_ExitTitle=Save
 # Note that the '&' goes just before the mnemonic character
 CTL_Save=&Save
+ACSD_Save=Save.
 # Note that the '&' goes just before the mnemonic character
 CTL_SaveAll=Save &All
+ACSD_SaveAll=Save all.
 # Note that the '&' goes just before the mnemonic character
 CTL_DiscardAll=&Discard All
+ACSD_DiscardAll=Discard all.
 EXC_Save=An exception occurred while saving
 CTL_PendingTitle=Waiting for Tasks to Finish
 ACSD_PendingTitle=N/A
