A11Y +  report Wizard.Panel fix

--- a/testtools/src/org/netbeans/modules/testtools/templates/functional__cfg-.xml.template
+++ b/testtools/src/org/netbeans/modules/testtools/templates/functional__cfg-.xml.template
@@ -6,7 +6,7 @@
  		<testset dir="qa-functional/src">
 			<patternset>
 				<include name="**/*.class"/>
-				<exclude name="**/data"/>
+				<exclude name="**/data/**"/>
  			</patternset>
  		</testset>
 	</testbag>
