--- a/testtools/src/org/netbeans/modules/testtools/wizards/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/Bundle.properties
@@ -33,7 +33,7 @@ TTT_TestSuiteTemplate=Select from available templates.
 
 TTT_TestTypeSuffix=Enter string added as command line suffix during IDE execution.
 
-TTT_TestTypeCompExc=Pattern used as exclude for compilation. Exmple: **/data/** excludes all data folders.
+TTT_TestTypeCompExc=Pattern used as exclude for compilation. Example: **/data/** excludes all data folders.
 
 CTL_CompClassPathCust=Customize Compilation Class Path
 
@@ -199,7 +199,7 @@ ERR_CreateTestType=Could not create new Test Type \"{0}\" in package \"{1}\". Re
 
 ERR_TestWorkspaceName=Selected Test Workspace name is not valid identifier.
 
-Could_not_create_new_Test_Workspace_in_package_\"=Could not create new Test Workspace in package \"{0}\". Reason is: {1}
+ERR_CreateTestWorkspace=Could not create new Test Workspace in package \"{0}\". Reason is: {1}
 
 LBL_JarZipFilter=Jar and Zip File Filter
 
@@ -208,3 +208,77 @@ Title_WorkspaceScript={0} XTest Workspace Script
 Title_TestTypeScript={0} Test Type Script
 
 Title_TestTypeConfig={0} Test Type Config
+
+MNM_TestBagName=N
+
+MNM_TestBagAttrs=A
+
+MNM_TestBagExecInclude=I
+
+MNM_TestBagExecExclude=E
+
+MNM_TestBagExecutor=X
+
+MNM_TestBagExecIDE=D
+
+MNM_TestBagExecCode=C
+
+MNM_TestCasesName=N
+
+MNM_TestCasesTemplate=T
+
+MNM_TestCasesAdd=A
+
+MNM_TestCasesRemove=R
+
+MNM_TestCasesUp=U
+
+MNM_TestCasesDown=D
+
+MNM_TestSuiteName=N
+
+MNM_TestSuitePackage=P
+
+MNM_TestSuiteTemplate=T
+
+MNM_TestSuiteDescription=D
+
+MNM_TestTypeCMDSuffix=S
+
+MNM_TestTypeCompExclude=X
+
+MNM_TestTypeCompClassPath=C
+
+MNM_TestTypeExecExtraJARs=E
+
+MNM_TestTypeJemmyHome=M
+
+MNM_TestTypeJellyHome=L
+
+MNM_TestTypeSetDefault=D
+
+MNM_TestTypeUseJemmy=J
+
+MNM_TestTypeWindowSystem=W
+
+MNM_TestTypeSDI=S
+
+MNM_TestTypeMDI=M
+
+MNM_TestTypeName=N
+
+MNM_TestTypeTemplate=T
+
+MNM_TestTypeDescription=D
+
+MNM_TestWorkspaceLevel=W
+
+MNM_TestWorkspaceAdvanced=A
+
+MNM_TestWorkspaceDefaultType=T
+
+MNM_TestWorkspaceDefaultAttrs=R
+
+MNM_TestWorkspaceNetbeansHome=N
+
+MNM_TestWorkspaceXTestHome=X
