#25680 - simple accessibility bugfix [accessible description added]

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -527,6 +527,7 @@ ACSD_FileSelectorCancelButton=Cancel
 ACSD_FileSelectorDialog=File selector dialog
 ACSN_FileSelectorTreeView=Tree View
 ACSD_FileSelectorTreeView=Tree view in file selector
+ACSD_FileSelectorComboBox=Select a filesystem.
 
 # File names on system filesystem
 # Each key is resource path to a primary file
