--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -59,7 +59,7 @@ Microsystems, Inc. All Rights Reserved.
              topdir="."
 	     module="netbeans/modules/monitor.jar"
 	     homepage="http://monitor.${homepage.base}/"
-	     distribution="${dist.base}/monitor.nbm">
+	     distribution="http://${dist.base}/monitor.nbm">
       <license file="${license.file}" />
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
     </makenbm>
