added 'nice look' to java and Javadoc mounts

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -138,3 +138,11 @@ org-netbeans-modules-junit-JUnitSettings.settings=JUnit Module Settings
 # Templates stuff
 Templates/JUnit/SimpleJUnitTest.java=Simple JUnit TestCase
 Templates/JUnit/SimpleNbJUnitTest.java=Simple NbJUnit TestCase
+
+# Java doc stuff
+Mount/Javadoc/org-netbeans-modules-junit-junit-javadoc.xml=JUnit 3.7 Javadoc
+Mount/Javadoc/org-netbeans-modules-junit-nb-junit-javadoc.xml=NetBeans extension to JUnit (NbJUnit) Javadoc
+
+# Java library stuff
+Mount/java/org-netbeans-modules-junit-junit-library.xml=JUnit 3.7
+Mount/java/org-netbeans-modules-junit-nbjunit-library.xml=NetBeans extension to JUnit (NbJUnit)
