Typo Contex -> Context (#25810)

--- a/web.core/src/org/netbeans/modules/web/core/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/Bundle.properties
@@ -127,7 +127,7 @@ Templates/JSP_Servlet/Filters/SimpleFilter.java=Simple Filter
 Templates/JSP_Servlet/Filters/AdvancedFilter.java=Advanced Filter
 
 Templates/JSP_Servlet/Listeners=Listeners
-Templates/JSP_Servlet/Listeners/ContextListener.java=Servlet Contex Listener
+Templates/JSP_Servlet/Listeners/ContextListener.java=Servlet Context Listener
 Templates/JSP_Servlet/Listeners/ContextAttributeListener.java=Servlet Context Attribute Listener
 Templates/JSP_Servlet/Listeners/SessionListener.java=Http Session Listener
 Templates/JSP_Servlet/Listeners/SessionAttributeListener.java=Http Session Attribute Listener
