--- a/web.core.syntax/build.xml
+++ b/web.core.syntax/build.xml
@@ -23,7 +23,7 @@ Microsystems, Inc. All Rights Reserved.
   <property name="core_root" location="../core"/>
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
-  <property name="license.file" value="../../nbbuild/bcl-license.txt"/>
+  <property name="license.file" value="../../nbbuild/standard-nbm-license.txt"/>
   <property name="nbm_alias" value="nb_ide"/>
   <property name="storepass" value="?"/>
 
