Fixed bug #25880 - missing entry in a resource bundle

--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -342,3 +342,6 @@ CTL_Thread_state_sleeping=Sleeping
 CTL_Thread_state_monitor=Monitor
 CTL_Thread_state_wait=Wait
 CTL_Thread_state_not_started=Not Started
+
+#Displayed during operation "Fix" if the debugger cannot find .class files.
+MSG_no_class_files_found=No .class files were found - cannot read bytecode.
