Added web/taglibed to NBM config

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -380,6 +380,7 @@ config.daily-alpha-nbms=ant, \
         web/jspsyntax, \
         web/jspdebug, \
         web/advanced, \
+        web/taglibed, \
         webl, \
         ${local.config.libs}, \
         ${local.config.xml}, \
