Checking port range in setPort (#25774)

--- a/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
+++ b/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
@@ -74,6 +74,8 @@ MSG_onlyRootOnUnix=Only root can open port lower than 1024 on UNIX machines.
 MSG_MappingsConflict=There can be conflicts in mappings specified for accessing resources through internal HTTP server.
 HINT_JavadocBase=Starting URL for browsing the IDE Javadoc documentation.
 PROP_JavadocBase=Base Javadoc URL
+# {0}: invalid port number
+ERR_PortNumberOutOfRange={0} is not a valid port number.
 
 # JavadocServlet
 MSG_JavadocListingTitle=List of javadocs
