#25701 - serialization of FileObject replaced with name of the FS and name of the FILE

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
@@ -69,6 +69,9 @@ EXC_indirect_compiler_on_script=\
 EXC_must_be_local=Object {0} must reside on local disk.
 # {0} - display name of build script
 EXC_build_xml_not_found=No build.xml Ant script was found above object {0}.
+# {0} - node display name
+# {1} - display name of compiler type
+EXC_build_xml_not_found2=The object {0} is configured to use {1} but the build script can no longer be found.
 # {0} - directory path
 EXC_dir_not_readable=Directory {0} is not readable.
 
