--- a/xml.tax/build.xml
+++ b/xml.tax/build.xml
@@ -141,6 +141,8 @@ Microsystems, Inc. All Rights Reserved.
         <for-each locations="lib"/>
 
         <delete dir="javadoc"/>
+
+        <!--ant dir="test" target="realclean"/-->
     </target>
 
     <target name="all" depends="clean,nbm"/>
@@ -159,6 +161,12 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Compile all XML sub-modules ..."/>
         <ant dir=".." target="clean"/>
         <ant dir=".." target="compile"/>
+    </target>
+
+    <target name="test">
+        <for-each locations="lib"/>
+
+        <!--ant dir="test"/-->
     </target>
 
 </project>
