--- a/xsl/build.xml
+++ b/xsl/build.xml
@@ -130,6 +130,8 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="real-clean" depends="clean">
         <delete dir="javadoc"/>
+
+        <ant dir="test" target="realclean"/>
     </target>
 
     <target name="all" depends="clean,nbm"/>
@@ -148,6 +150,10 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Compile all XML sub-modules ..."/>
         <ant dir=".." target="clean"/>
         <ant dir=".." target="compile"/>
+    </target>
+
+    <target name="test">
+        <ant dir="test"/>
     </target>
 
 </project>
