Still working on scenarios

--- a/xsl/src/org/netbeans/modules/xsl/actions/Bundle.properties
+++ b/xsl/src/org/netbeans/modules/xsl/actions/Bundle.properties
@@ -13,4 +13,4 @@
 ## TransformAction.java
 NAME_transform_action=XSL Transformation...
 # ScenarioAction.java
-LBL_Scenario_Action=Scenarios
+LBL_Scenario_Action=Edit Scenarios...
