--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -166,7 +166,7 @@ HINT_textLimitWidth=Count of characters after which the text limit line is displ
 PROP_base_keyBindingList=Global Key Bindings
 HINT_base_keyBindingList=Actions bound to shortcut keys for all editor types.
 
-PROP_base_toolbarVisible=Toolbar Visible
+PROP_base_toolbarVisible=Show Toolbar
 HINT_base_toolbarVisible=If True, display the editor toolbar.
 
 
