Correcting dev branding on trunk.

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -668,7 +668,7 @@ ToDo:
         <include name="*.jar"/>
       </eager>
     </createmodulexml>
-    <echo file="${netbeans.dest}/build_info">NetBeans 3.4 beta build
+    <echo file="${netbeans.dest}/build_info">NetBeans dev build
 ------------------
 Number:   ${buildnumber}
 Date:     ${TODAY}
