--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -11,7 +11,7 @@
 
 # VERSIONING (TopLogging, MainWindow)
 # {0} - build number
-currentVersion=NetBeans IDE 3.4 Beta 3 (Build {0})
+currentVersion=NetBeans IDE Dev (Build {0})
 
 # core manifest
 OpenIDE-Module-Name=IDE Core
