removed uncompilable module tasklist from NBM build. added ant to javadoc

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -364,7 +364,6 @@ config.daily-alpha-nbms=ant, \
         scripting, \
         serialversion, \
         sysprops, \
-        tasklist, \
         text, \
         tomcatint/tomcat40, \
         tomcatint/bundledtomcat, \
@@ -392,7 +391,8 @@ config.daily-alpha-nbms=ant, \
 ;     will be stripped for signature API tests
 javadoc.packages=org.netbeans.api.*, \
         org.netbeans.spi.*
-config.javadoc=core/javahelp, \
+config.javadoc=ant, \
+        core/javahelp, \
         core/settings, \
         diff, \
         java/api, \
