--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -362,7 +362,7 @@ ToDo:
     <echo message="Building module monitor..."/>
     <ant dir="../monitor" target="netbeans"/>
   </target>
-  <target name="all-mdr" depends="all-openide,all-openidex">
+  <target name="all-mdr" depends="all-openide,all-openidex,all-openidex/looks,all-core/naming">
     <echo message="Building module mdr..."/>
     <ant dir="../mdr" target="netbeans"/>
   </target>
