Add comments and move strings to resource bundles

--- a/xsl/src/org/netbeans/modules/xsl/cookies/Bundle.properties
+++ b/xsl/src/org/netbeans/modules/xsl/cookies/Bundle.properties
@@ -13,3 +13,7 @@
 ## ValidateXSLSupport
 MSG_checking=Checking {0}...
 MSG_too_many_errs=Too many errors, stopping further checking.
+
+## ScenarioSupport
+NAME_customize_scenarios_title=Scenario editor
+MSG_Problems_saving_scenarios_persistently=There are problems saving scenarios persistently.  Cause:
